#38 Fixes issue on mobile where welcome container is hidden.
Fixes issue on mobile screens where the welcome element is hidden by the sidebar until the 500px mark where the navbar disappears.

--- a/css/particles.css
+++ b/css/particles.css
@@ -12,7 +12,7 @@
 #welcomeContainer {
     top: 45%;
     left: 50%;
-    width: 100vw;
+    width: 100%;
     position: absolute;
     vertical-align: middle;
     transform: translate(-50%, -50%);
